@@ -19,8 +19,9 @@ sourceforge (2.6-0+11+) unstable; urgency=low
   * [Soon-Son] removed all links to nonexistent document
   * [Soon-Son] more i18n effort including patch # 283
   * [Soon-Son] removed dtd definition for bug # 120
+  * [Christian] Repared trove map count 
 
- -- Christian Bayle <bayle@debian.org>  Mon,  6 May 2002 00:09:25 +0200
+ -- Christian Bayle <bayle@debian.org>  Fri, 24 May 2002 00:49:49 +0200
 
 sourceforge (2.6-0+11) unstable; urgency=low
 
